Create search profile API call
